added banner section and responsive done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FLOWERS STATION</title>
+    <title>Flowers Station</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -18,12 +18,27 @@
       <nav class="Navbar">
         <img src="./assets/logo.png" alt="logo" />
         <div class="nav-iteam">
-          <a href="#">Home</a>
-          <a href="#">Shop</a>
-          <a href="#">About us</a>
-          <div><a href="#"><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a></div>
+          <a class="all-iteam" id="item1" href="#">Home</a>
+          <a class="all-iteam praimary-color" href="#">Shop</a>
+          <a class="all-iteam praimary-color" href="#">About us</a>
+          <div>
+            <a id="iteam4" href="#"
+              ><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a
+            >
+          </div>
         </div>
       </nav>
+      <section class="banner">
+        <div class="banner-left">
+          <h1 class="banner-title">ALWAYS <span class="og-color">FRESH FLOWERS</span> </h1>
+          <p class="banner-description praimary-color">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <img src="./assets/hero-flower.png" alt="flower-pic" />
+      </section>
     </header>
     <main></main>
     <footer></footer>
