card section added and responsive done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       </nav>
       <section class="banner">
         <div class="banner-left">
-          <h1 class="banner-title">ALWAYS <span class="og-color">FRESH FLOWERS</span> </h1>
+          <h1 class="banner-title">
+            ALWAYS <span class="og-color">FRESH FLOWERS</span>
+          </h1>
           <p class="banner-description praimary-color">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From classic roses to exotic blooms, we offer a wide
@@ -40,7 +42,69 @@
         <img src="./assets/hero-flower.png" alt="flower-pic" />
       </section>
     </header>
-    <main></main>
+    <main class="container">
+      <section class="Plants-Section">
+        <div class="title-section">
+          <h2 class="plant-title"><span class="og-color">Our</span> Plants</h2>
+          <p class="plant-subtitle praimary-color">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br> classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+        <div class="card">
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+          <div class="card-detales">
+            <img src="./assets/sample-flower-image.png" alt="" />
+              <h6 class="flower-name">Lily Blossom</h6>
+              <h6 class="flower-price">20 USD</h6>
+            <button class="btn">ADD TO CART</button>
+          </div>
+        </div>
+      </section>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
