added Plants Lover Section and responsive done

--- a/index.html
+++ b/index.html
@@ -48,62 +48,82 @@
           <h2 class="plant-title"><span class="og-color">Our</span> Plants</h2>
           <p class="plant-subtitle praimary-color">
             Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From <br> classic roses to exotic blooms, we offer a wide
-            variety of fresh.
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
           </p>
         </div>
         <div class="card">
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
           <div class="card-detales">
             <img src="./assets/sample-flower-image.png" alt="" />
-              <h6 class="flower-name">Lily Blossom</h6>
-              <h6 class="flower-price">20 USD</h6>
+            <h6 class="flower-name">Lily Blossom</h6>
+            <h6 class="flower-price">20 USD</h6>
             <button class="btn">ADD TO CART</button>
           </div>
         </div>
       </section>
-      
+      <section class="Plants-Lover-Section">
+        <img src="./assets/flower-store.png" alt="" />
+        <div class="Plants-Lover-dscription">
+          <h1 class="Plants-Lover-title">Flower & Plants Lover</h1>
+          <p class="praimary-color">
+            . Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+          <p class="praimary-color">
+            . Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+          <p class="praimary-color">
+            . Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
