join section added

--- a/index.html
+++ b/index.html
@@ -106,25 +106,72 @@
       <section class="Plants-Lover-Section">
         <img src="./assets/flower-store.png" alt="" />
         <div class="Plants-Lover-dscription">
-          <h1 class="Plants-Lover-title">Flower & Plants Lover</h1>
-          <p class="praimary-color">
-            . Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh.
+          <h2 class="Plants-Lover-title">
+            Flower & Plants <br />
+            Lover
+          </h2>
+          <ul>
+            <li>
+              <p class="praimary-color">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+            <li>
+              <p class="praimary-color">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+            <li>
+              <p class="praimary-color">
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="Latest-Deal-Section">
+        <div class="Latest-Deal-detals">
+          <h1 class="Latest-Deal-title">
+            <span class="og-color">Latest</span> Deals
+          </h1>
+          <p class="Latest-Deal-subtitle praimary-color">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
           </p>
-          <p class="praimary-color">
-            . Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh.
-          </p>
-          <p class="praimary-color">
-            . Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh.
-          </p>
+        </div>
+        <div class="Latest-Deal-card">
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="Join-Section">
+        <div class="parent-Bunch">
+          <h2 class="parent-Bunch-title">Join the colorful Bunch</h2>
+          <div class="colorful-Bunch">
+            <input type="email" placeholder="Write email" />
+            <button class="btn btn2">Subscribe</button>
+          </div>
+        </div>
+      </section>
+      <section class="container">
+        <div class="foot-description">
+          <img src="./assets/logo.png" alt="" />
+          <p class="praimary-color">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
