Latest  Deals section added

--- a/index.html
+++ b/index.html
@@ -107,32 +107,33 @@
         <img src="./assets/flower-store.png" alt="" />
         <div class="Plants-Lover-dscription">
           <h2 class="Plants-Lover-title">
-            Flower & Plants <br />
+            Flower & Plants <br/>
             Lover
           </h2>
           <ul>
             <li>
-              <p class="praimary-color">
+              <p class="praimary-color plant-subtitles">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
               </p>
             </li>
             <li>
-              <p class="praimary-color">
+              <p class="praimary-color plant-subtitles">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
               </p>
             </li>
             <li>
-              <p class="praimary-color">
+              <p class="praimary-color plant-subtitles">
                 Indulge your senses with the beauty and fragrance of our fresh
                 flower shop. From classic roses to exotic blooms, we offer a
                 wide variety of fresh.
               </p>
             </li>
           </ul>
+          <button class="badge"><img src="./assets/trusted-badge.png" alt=""></button>
         </div>
       </section>
       <section class="Latest-Deal-Section">
@@ -147,9 +148,19 @@
           </p>
         </div>
         <div class="Latest-Deal-card">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+          <div class="card-1">
+            <span class="offers-Bloom-Plant price">60% Off | Bloom Plant</span>
+            <a class="store" href="">Shop Now</a>
+          </div>
+          <div class="card-2">
+            <span class="offers-Zabo-Plant price">25% Off | Zabo Plant</span>
+            <a class="store" href="">Shop Now</a>
+          </div>
+          <div class="card-3">
+            <span class="offers-Ana-Plant price-3">30% Off |  Ana  Plant</span>
+            <a class="store-3" href="">Shop Now</a>
+          </div>
+          
         </div>
       </section>
     </main>
